--- a/index .html
+++ b/index .html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <h1>The squad</h1>
+    <div id="info"></div>
+
+
+    <script src="JS/index.js"></script>
 </body>
 </html>
